fixed title spacing

--- a/assets/snake.css
+++ b/assets/snake.css
@@ -29,7 +29,7 @@ li{
   font-family: sans-serif;
   font-size: 36px;
   width: 100px;
-  padding: 5px 0;
+  padding: 15px 0 5px 0;
 }
 
 .board {
